# WorldBloxxingAssociation

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  surrealdb.service
bloxxing_franchise/: Cargo.toml
bloxxing_match/: Cargo.toml  README.md
bloxxing_match/assets/: info.txt
bloxxing_match/blog/: index.html
bloxxing_match/cert/: info.txt  make_cacert_pem.sh
bloxxing_match/setup/: info.txt
bloxxing_match/src/: assetdelivery_v1.rs  assetgame.rs  auth_v1.rs  auth_v2.rs  clientsettings_v1.rs  clientsettings_v2.rs  develop_v1.rs  devforum.rs  economy_v1.rs  ecsv2.rs  ephemeralcounters_api.rs  gamepersistence.rs  lib.rs  locale_v1.rs  main.rs  privatemessages_v1.rs  users_v1.rs  versioncompatibility_api.rs
bloxxing_referee/: Cargo.toml
src/: auth_v1.rs  economy_v1.rs  lib.rs  main.rs  privatemessages_v1.rs  users_v1.rs
