[package]
name = "bloxxing_match"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

[dependencies]
argon2 = "0.5.3"
axum = {version = "0.7.5", features = ["macros"]}
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum-server = {version = "0.7.1", features = ["tls-rustls"]}
base64 = "0.22.1"
http = "1.1.0"
rand = "0.8.5"
robacking = { version = "0.1.0", path = "/home/bainchild/robacking" }
rustls = { version = "0.23.16", features = ["aws-lc-rs"] }
serde = "1.0.202"
serde_json = "1.0.117"
serde_repr = "0.1.19"
sha1 = "0.10.6"
sha256 = "1.5.0"
surrealdb = "2.0.4"
time = { version = "0.3.36", features = ["formatting", "serde"]}
tokio = {version = "1.37.0", features = ["macros","rt-multi-thread"]}
tower = "0.5.1"
tower-http = {version = "0.6.1", features = ["cors", "fs"]}
